// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmds:install - with initialized workspace and module installs a module package 1`] = `
{
  "author": "CI Test User <ci@example.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@lql-pg/base32": "0.4.0",
  },
  "description": "undefined",
  "devDependencies": {
    "pgsql-test": "^2.13.2",
  },
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "SEE LICENSE IN LICENSE",
  "name": "undefined",
  "pnpm": {
    "overrides": {
      "graphql": "14.7.0",
    },
  },
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "lint": "eslint . --fix",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs a module package 2`] = `
[
  "../../extensions/@lql-pg/base32/LICENSE",
  "../../extensions/@lql-pg/base32/Makefile",
  "../../extensions/@lql-pg/base32/README.md",
  "../../extensions/@lql-pg/base32/__tests__/__snapshots__/base32.decode.test.ts.snap",
  "../../extensions/@lql-pg/base32/__tests__/__snapshots__/base32.encode.test.ts.snap",
  "../../extensions/@lql-pg/base32/__tests__/base32.decode.test.ts",
  "../../extensions/@lql-pg/base32/__tests__/base32.encode.test.ts",
  "../../extensions/@lql-pg/base32/deploy/schemas/base32/procedures/decode.sql",
  "../../extensions/@lql-pg/base32/deploy/schemas/base32/procedures/encode.sql",
  "../../extensions/@lql-pg/base32/deploy/schemas/base32/schema.sql",
  "../../extensions/@lql-pg/base32/jest.config.js",
  "../../extensions/@lql-pg/base32/launchql-base32.control",
  "../../extensions/@lql-pg/base32/package.json",
  "../../extensions/@lql-pg/base32/pgpm.plan",
  "../../extensions/@lql-pg/base32/revert/schemas/base32/procedures/decode.sql",
  "../../extensions/@lql-pg/base32/revert/schemas/base32/procedures/encode.sql",
  "../../extensions/@lql-pg/base32/revert/schemas/base32/schema.sql",
  "../../extensions/@lql-pg/base32/sql/launchql-base32--0.4.6.sql",
  "../../extensions/@lql-pg/base32/verify/schemas/base32/procedures/decode.sql",
  "../../extensions/@lql-pg/base32/verify/schemas/base32/procedures/encode.sql",
  "../../extensions/@lql-pg/base32/verify/schemas/base32/schema.sql",
  "../../extensions/@lql-pg/verify/LICENSE",
  "../../extensions/@lql-pg/verify/Makefile",
  "../../extensions/@lql-pg/verify/README.md",
  "../../extensions/@lql-pg/verify/__tests__/ext-verify.test.ts",
  "../../extensions/@lql-pg/verify/deploy/procedures/get_entity_from_str.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/get_schema_from_str.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/list_indexes.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/list_memberships.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_constraint.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_domain.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_extension.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_function.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_index.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_membership.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_policy.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_role.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_schema.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_security.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_table.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_table_grant.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_trigger.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_type.sql",
  "../../extensions/@lql-pg/verify/deploy/procedures/verify_view.sql",
  "../../extensions/@lql-pg/verify/jest.config.js",
  "../../extensions/@lql-pg/verify/launchql-verify.control",
  "../../extensions/@lql-pg/verify/package.json",
  "../../extensions/@lql-pg/verify/pgpm.plan",
  "../../extensions/@lql-pg/verify/revert/procedures/get_entity_from_str.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/get_schema_from_str.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/list_indexes.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/list_memberships.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_constraint.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_domain.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_extension.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_function.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_index.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_membership.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_policy.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_role.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_schema.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_security.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_table.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_table_grant.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_trigger.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_type.sql",
  "../../extensions/@lql-pg/verify/revert/procedures/verify_view.sql",
  "../../extensions/@lql-pg/verify/sql/launchql-verify--0.4.6.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/get_entity_from_str.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/get_schema_from_str.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/list_indexes.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/list_memberships.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_constraint.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_domain.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_extension.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_function.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_index.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_membership.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_policy.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_role.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_schema.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_security.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_table.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_table_grant.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_trigger.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_type.sql",
  "../../extensions/@lql-pg/verify/verify/procedures/verify_view.sql",
]
`;

exports[`cmds:install - with initialized workspace and module installs a module package 3`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'plpgsql,uuid-ossp,webql-base32'
relocatable = false
superuser = false
"
`;

exports[`cmds:install - with initialized workspace and module installs two modules 1`] = `
{
  "author": "CI Test User <ci@example.com>",
  "bugs": {
    "url": "https://github.com/undefined/undefined/issues",
  },
  "dependencies": {
    "@webql/base32": "1.2.1",
    "@webql/utils": "1.1.2",
  },
  "description": "undefined",
  "devDependencies": {
    "pgsql-test": "^2.13.2",
  },
  "homepage": "https://github.com/undefined/undefined",
  "keywords": [],
  "license": "SEE LICENSE IN LICENSE",
  "name": "undefined",
  "pnpm": {
    "overrides": {
      "graphql": "14.7.0",
    },
  },
  "publishConfig": {
    "access": "undefined",
    "directory": "dist",
  },
  "repository": {
    "type": "git",
    "url": "https://github.com/undefined/undefined",
  },
  "scripts": {
    "lint": "eslint . --fix",
    "test": "jest",
    "test:watch": "jest --watch",
  },
  "version": "0.0.1",
}
`;

exports[`cmds:install - with initialized workspace and module installs two modules 2`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'plpgsql,uuid-ossp,webql-base32,webql-utils'
relocatable = false
superuser = false
"
`;
